# RailMover

./: .gitignore  README.md  pyproject.toml  readme.md
script/: episode0a.md  episode0b.md
src/railmover/: imu.py  mover.py  rail.py
tests/test_railmover/: test_bspline.py  test_mover.py  test_rail.py
